--- a/index.html
+++ b/index.html
@@ -1,4 +1,15 @@
-<div class="slider">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Slider</title>
+    <link rel="stylesheet" href="path/to/your/css/style.css">
+    <script src="path/to/your/js/script.js" defer></script>
+</head>
+<body>
+  
+  <div class="slider">
 	<button class="slider--btn slider--btn__prev">
 		<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
 			<path d="m15 18-6-6 6-6" />
@@ -116,3 +127,8 @@ https://devloop01.github.io/voyage-slider/images/machu-pichu.jpg" alt="Image 2" 
 		</svg>
 	</a>
 </div>
+  
+  </body>
+</html>
+  
+  
